[gd_scene load_steps=21 format=3 uid="uid://xyalq5v0tsj"]

[ext_resource type="Script" uid="uid://br05u0mmt2e4r" path="res://scripts/gamescenes/game_scene.gd" id="1_v5t8o"]
[ext_resource type="PackedScene" uid="uid://cwpwgqius8x6h" path="res://scenes/entities/player/player_jet.tscn" id="2_8w0xn"]
[ext_resource type="PackedScene" uid="uid://nnlswhqy5y5g" path="res://scenes/gui/bottom_ui.tscn" id="2_mam7v"]
[ext_resource type="FontFile" uid="uid://b84u21ff4j81v" path="res://assets/font/PixelSerif_16px_v02.ttf" id="3_8w0xn"]
[ext_resource type="PackedScene" uid="uid://egbwpmbt7acm" path="res://scenes/gamescenes/level_factory.tscn" id="5_oppbp"]
[ext_resource type="AudioStream" uid="uid://c1q6ymevyrv32" path="res://assets/sfx/no_ammo1.wav" id="6_cfrlv"]
[ext_resource type="PackedScene" uid="uid://48l223uv3v3v" path="res://scenes/gui/game_over.tscn" id="6_yudqv"]
[ext_resource type="AudioStream" uid="uid://p552gbadwyyf" path="res://assets/sfx/accel.wav" id="7_cfrlv"]
[ext_resource type="AudioStream" uid="uid://beubyms516jvn" path="res://assets/sfx/game_over.wav" id="9_2bpn8"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_mam7v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8w0xn"]
size = Vector2(290, 4)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_oppbp"]
b = Vector2(273, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_73je6"]
b = Vector2(0, 484)

[sub_resource type="Animation" id="Animation_oppbp"]
resource_name = "Game_Start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Jet:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35, 0.75, 1),
"transitions": PackedFloat32Array(0.5, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1.7, 1.7), Vector2(1.3, 1.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player Jet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35, 0.75, 1),
"transitions": PackedFloat32Array(0.5, 1.5, 1, 1),
"update": 0,
"values": [Vector2(135, 500), Vector2(135, 200), Vector2(135, 300), Vector2(135, 335)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFX/Accel")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1.25],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_5bmdg"]
resource_name = "Next Level"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Level Number:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hfv4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Out of Ammo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Level Number:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player Jet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player Jet:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(135, 335)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Low Fuel Warning:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Game Over:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Game Over:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SFX/game_over:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cfrlv"]
resource_name = "low_fuel"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Low Fuel Warning:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_d7yel"]
resource_name = "out_of_ammo"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Out of Ammo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yudqv"]
resource_name = "Game_Over"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Game Over:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Game Over:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFX/game_over:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bmdg"]
_data = {
&"Game_Over": SubResource("Animation_yudqv"),
&"Game_Start": SubResource("Animation_oppbp"),
&"Next Level": SubResource("Animation_5bmdg"),
&"RESET": SubResource("Animation_hfv4q"),
&"low_fuel": SubResource("Animation_cfrlv"),
&"out_of_ammo": SubResource("Animation_d7yel")
}

[node name="Game Scene" type="Node2D"]
script = ExtResource("1_v5t8o")

[node name="Level_Factory" parent="." instance=ExtResource("5_oppbp")]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(2, 2)

[node name="Scroll Root" type="Node2D" parent="."]

[node name="Player Jet" parent="." instance=ExtResource("2_8w0xn")]
position = Vector2(135, 335)

[node name="Level Limit" type="Node2D" parent="."]

[node name="LevelRecycler" type="Area2D" parent="Level Limit"]
position = Vector2(0, 490)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level Limit/LevelRecycler"]
shape = SubResource("WorldBoundaryShape2D_mam7v")

[node name="FullLevel Detection" type="Area2D" parent="Level Limit"]
position = Vector2(-3, -11)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level Limit/FullLevel Detection"]
position = Vector2(135, 8)
shape = SubResource("RectangleShape2D_8w0xn")

[node name="BulletLimit" type="Area2D" parent="Level Limit"]
position = Vector2(-1, -2)
collision_layer = 32
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level Limit/BulletLimit"]
shape = SubResource("SegmentShape2D_oppbp")

[node name="LeftJetExit" type="Area2D" parent="Level Limit"]
position = Vector2(-62, 2)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level Limit/LeftJetExit"]
shape = SubResource("SegmentShape2D_73je6")

[node name="RightJetExit" type="Area2D" parent="Level Limit"]
position = Vector2(330, 0)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level Limit/RightJetExit"]
shape = SubResource("SegmentShape2D_73je6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_scale = 2.0

[node name="Bottom UI" parent="CanvasLayer" instance=ExtResource("2_mam7v")]

[node name="Out of Ammo" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -48.0
offset_right = 270.0
offset_bottom = -22.0
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.60784316)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_8w0xn")
theme_override_font_sizes/font_size = 32
text = "<!> OUT OF AMMO <!>"

[node name="Low Fuel Warning" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -180.0
offset_right = 270.0
offset_bottom = -154.0
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 0.83137256, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.60784316)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_8w0xn")
theme_override_font_sizes/font_size = 32
text = "/!\\ LOW FUEL /!\\"
horizontal_alignment = 1

[node name="Level Number" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -124.0
offset_right = 266.0
offset_bottom = -98.0
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_8w0xn")
theme_override_font_sizes/font_size = 32
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Game Over" parent="CanvasLayer" instance=ExtResource("6_yudqv")]
visible = false
modulate = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5bmdg")
}

[node name="Fuel_warning" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5bmdg")
}

[node name="Ammo_warning" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5bmdg")
}

[node name="SFX" type="Node" parent="."]

[node name="no_ammo" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_cfrlv")
bus = &"SFX"

[node name="Accel" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_cfrlv")
bus = &"SFX"

[node name="game_over" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("9_2bpn8")
bus = &"SFX"

[connection signal="area_entered" from="Level Limit/LevelRecycler" to="." method="_on_level_recycler_area_entered"]
[connection signal="area_entered" from="Level Limit/FullLevel Detection" to="." method="_on_full_level_detection_area_entered"]
[connection signal="body_entered" from="Level Limit/BulletLimit" to="." method="_on_bullet_limit_body_entered"]
[connection signal="body_entered" from="Level Limit/LeftJetExit" to="." method="_on_left_jet_exit_body_entered"]
[connection signal="body_entered" from="Level Limit/RightJetExit" to="." method="_on_right_jet_exit_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
